Implemented api routes and testing for Advisor
